# parse-onliner

./: .gitignore  README.md  pyproject.toml
parse-onliner/: index.html  result.json
parse_onliner/: main.py  result_data.json
parse_onliner/discount_bot/: discount_bot.py  result_data.json
