[tool.poetry]
name = "parse-onliner"
version = "0.1.0"
description = "TG bot for parsing notebook store"
authors = ["Mikhail Orlov <crazyminer398@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
bs4 = "^0.0.1"
requests = "^2.28.1"
aiogram = "^2.23.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
